deploy/yamls-parameterized/kustomize/base/web-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: web
    name: web
spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            move2kube.konveyor.io/service: web
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 25%
        type: RollingUpdate
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: web
            name: web
        spec:
            containers:
                - env:
                    - name: API_URL
                      value: http://api:1234/api
                  image: quay.io/myproject/fibonacci-web:latest
                  imagePullPolicy: Always
                  name: web
                  ports:
                    - containerPort: 80
                      protocol: TCP
                  resources: {}
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            imagePullSecrets:
                - name: quay-io-imagepullsecret
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 30
status: {}

...
